# openjaws

./: .gitignore  .mesh-types-trigger  Errors.md  Host.md  MigratingToTyped.md  MigratingToTyped2.md  Notes.md  Problems.md  README.md  mesh-types.d.ts
.rheo/manifests/: Codegen.cell.json  Kindly_Proxy.cell.json  Orchestrator_55237.cell.json  Orchestrator_55513.cell.json  Orchestrator_55657.cell.json  Orchestrator_55793.cell.json  Orchestrator_55930.cell.json  Orchestrator_58352.cell.json  Orchestrator_59346.cell.json  Orchestrator_59541.cell.json  Orchestrator_59691.cell.json  Orchestrator_60028.cell.json  Orchestrator_61580.cell.json  Orchestrator_62104.cell.json  Orchestrator_62239.cell.json  Orchestrator_62397.cell.json  Orchestrator_62551.cell.json  Orchestrator_62721.cell.json  Orchestrator_62938.cell.json  Orchestrator_63099.cell.json  Orchestrator_63301.cell.json  Orchestrator_65403.cell.json  Orchestrator_69185.cell.json  Orchestrator_76456.cell.json  SvelteKit_55900.cell.json  SvelteKit_56061.cell.json  SvelteKit_60159.cell.json  SvelteKit_61719.cell.json  SvelteKit_63439.cell.json  SvelteKit_63612.cell.json  SvelteKit_64087.cell.json  SvelteKit_65147.cell.json  SvelteKit_65544.cell.json  SvelteKit_69339.cell.json  SvelteKit_76108.cell.json  UI_Server_55900.cell.json  ai.cell.json  architect.cell.json  checklist.cell.json  coder.cell.json  (+6 more)
.rheo/registry/: Codegen.json  Kindly_Proxy.json  Orchestrator_76456.json  SvelteKit_76108.json  ai.json  architect.json  checklist.json  coder.json  kindly.json  log.json  memory.json  projects.json  telemetry.json
ai/: index.ts
ai-gemini/: index.ts
ai-ui/: index.ts
ai-ui-ui/: index.ts
airplane/: Cell.toml  safety-controller.ts
checklist/: index.ts
codegen/: codegen.ts
coder/: index.ts
comms/: ARCHITECTURE.md  index.ts
discord/: Cell.toml.example  index.ts
kindly/: Cell.toml  README.md  index.ts  index.ts.example
log/: index.ts
memory/: README.md  index.ts  temporal_memory.json
mesh1/: .env.example  Assessment.md  Fuck.md  KimiThoughts.md  Notes.md  Type.md  Users.md  checklist.md  rheo-mesh.d.ts  ts_errors.txt
mesh1/ai-ui/: Cell.toml  index.ts
mesh1/ai-ui-ui/: Cell.toml  index.ts
mesh1/architect/: index.ts
mesh1/checklist/: Cell.toml  index.ts
mesh1/codegen/: cell.json
mesh1/comms/: ARCHITECTURE.md  Cell.toml  README.md  index.ts
mesh1/kindly/: Assessment.md  Memory.md  Notes.md  README.md  index.ts
mesh1/lidar-controller/: Cell.toml.example  index.ts
mesh1/log/: Cell.toml
mesh1/orbital/: Cargo.toml  Cell.toml
mesh1/orbital/src/: main.rs
mesh1/protocols/example1/example1-rs/: Cargo.toml
mesh1/protocols/example1/example1-rs/src/: lib.rs
mesh1/test-1/: Cargo.toml  Cell.toml
mesh1/test-1/src/: main.rs
mesh1/trading/: Cargo.toml  Cell.toml
mesh1/trading/src/: main.rs
openjaws/: .mesh-types-trigger  MigratingToTyped.md  MigratingToTyped2.md  Notes.md  Orchestrator.cell.json  Orchestrator_20626.cell.json  Orchestrator_21560.cell.json  Orchestrator_25150.cell.json  Orchestrator_27501.cell.json  Orchestrator_28538.cell.json  Orchestrator_32010.cell.json  Orchestrator_32419.cell.json  Orchestrator_40182.cell.json  Orchestrator_42681.cell.json  Orchestrator_48121.cell.json  Orchestrator_50213.cell.json  Orchestrator_51514.cell.json  Plan.md  README.md  StrictTypeSafety.md  Type.md  TypedMeshGuide.md  mesh-types.d.ts
orchestrator/: index.ts
projects/: index.ts
protocols/: README.md  USAGE_EXAMPLES.md  browser-shim.ts  example1.ts  example2.ts  typed-mesh.ts
radar-controller/: Cell.toml
skills/: INTEGRATION.md  OVERVIEW.md  USAGE.md  index.ts  test.ts
telegram/: Cell.toml  Cell.toml.example  index.ts
telemetry/: index.ts
tts/: Cell.toml  index.ts
tts-ui/: Cell.toml  HOST.md  index.ts
ui/: UI_IMPLEMENTATION_GUIDE.md  svelte.config.js
(+197 files in other folders)
