[package]
name = "test-1-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cell-protocol-example1-rs = { path = "../protocols/example1/example1-rs" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
