[package]
name = "trading-cell"
version = "0.1.0"
edition = "2021"

[dependencies]
# Rheo mesh protocol (local path to your protocol)
cell-protocol-example1-rs = { path = "../protocols/example1/example1-rs" }

# Match cell-protocol-example1-rs's tokio exactly
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# For price calculations
rust_decimal = { version = "1.33", features = ["serde"] }

# Random number generation
rand = "0.8"
