# example1-rs/Cargo.toml
[package]
name = "cell-protocol-example1-rs"
version = "0.1.0"
edition = "2021"
authors = ["OpenJaws Contributors"]
description = "High-performance distributed mesh protocol for trading platforms"
license = "MIT OR Apache-2.0"
repository = "https://github.com/openjaws/rheo-mesh"
keywords = ["distributed", "mesh", "trading", "p2p", "consensus"]
categories = ["network-programming", "finance", "asynchronous"]

[features]
default = ["full"]
full = ["trading", "metrics", "tls"]
trading = []
metrics = ["prometheus"]
tls = ["tokio-rustls", "rustls-pemfile"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# HTTP server/client
axum = { version = "0.7", features = ["http2", "macros"] }
tower-http = { version = "0.5", features = [
    "compression-gzip",
    "cors",
    "trace",
] }
hyper = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Concurrency & collections
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Tracing & logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Optional: Metrics
prometheus = { version = "0.13", optional = true }

# Optional: TLS
tokio-rustls = { version = "0.25", optional = true }
rustls-pemfile = { version = "2.0", optional = true }


[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "routing"
harness = false
